# bulls_and_cows

./: .clang-format  .gitignore  CMakeLists.txt  README.md
source/: BullsAndCows.hpp  DataFabric.hpp  Players.hpp  Validator.hpp  generate_data.cpp  main.cpp
source/Players/: ComputerPlayer.hpp  HumanPlayer.hpp  IPlayer.hpp
source/Validators/: ComputerInputValidator.hpp  HumanInputValidator.hpp  IValidator.hpp
